he terminado los ultimos arreglos de la maquetación

--- a/src/app/componentes/carrito/carrito.component.html
+++ b/src/app/componentes/carrito/carrito.component.html
@@ -1,36 +1,48 @@
 <app-nabvar></app-nabvar>
 <br><br><br><br><br>
-
-    <div class="container mt-5">
-      
-        <table class="table  table-bordered-">
-            <thead>
-              <tr>
-                <th>Número de producto</th>
-                <th>Nombre del producto</th>
-                <th>Cantidad</th>
-                <th>Precio por unidad</th>
-                <th>Precio final</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Producto 1</td>
-                <td>2</td>
-                <td>$10.00</td>
-                <td>$20.00</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Producto 2</td>
-                <td>1</td>
-                <td>$15.00</td>
-                <td>$15.00</td>
-              </tr>
-              <!-- Agrega más filas según sea necesario -->
-            </tbody>
-          </table>
+<div class="container mt-5">
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Número de producto</th>
+        <th>Nombre del producto</th>
+        <th>Cantidad</th>
+        <th>Precio por unidad</th>
+        <th>Precio final</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Móvil Quantum</td>
+        <td>2</td>
+        <td>$899.00</td>
+        <td>$1798.00</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Impresora 3D Básica</td>
+        <td>2</td>
+        <td>$349.00</td>
+        <td>$698.00</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Reloj Táctil De Lujo</td>
+        <td>1</td>
+        <td>$499.00</td>
+        <td>$499.00</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Móvil Avanzado</td>
+        <td>1</td>
+        <td>$799.00</td>
+        <td>$799.00</td>
+      </tr>
+      <!-- Agrega más filas según sea necesario -->
+    </tbody>
+  </table>
   
       <div class="container">
         <div class="row justify-content-center">
