--- a/src/app/componentes/catalogo/impresora/impresora.component.html
+++ b/src/app/componentes/catalogo/impresora/impresora.component.html
@@ -22,6 +22,7 @@
             <li>Interfaz de usuario intuitiva</li>
             <li>Impresiones de calidad</li>
           </ul>
+          <p class="card-text">Precio: $349</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -46,6 +47,7 @@
             <li>Calibración automática</li>
             <li>Compatibilidad con múltiples materiales</li>
           </ul>
+          <p class="card-text">Precio: $599</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -70,6 +72,7 @@
             <li>Amplio espectro de materiales</li>
             <li>Software de slicing avanzado</li>
           </ul>
+          <p class="card-text">Precio: $899</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -94,6 +97,7 @@
             <li>Materiales de alta resistencia</li>
             <li>Escalabilidad para proyectos grandes</li>
           </ul>
+          <p class="card-text">Precio: $2999</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -178,48 +182,38 @@
     </div>
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
-     
+
       <!-- Producto 1 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-          <img src="assets\img\Moviles\movil5.1.jpeg" class="img-fluid" alt="Producto 2">
-          <h3>Impresora 3D</h3>
-          <p class="precio">$699.99</p>
-          <div class="d-flex justify-content-between">
-            <a href="/impresora" class="ver-mas">Ver más</a>
-            <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
-          </div>
+            <img src="assets\img\Moviles\movil4.jpeg" class="img-fluid d-block" alt="Producto 2" style="height: 300px; width: 100%; object-fit: cover;"><br>
+            <h3>Móvil Titanium</h3>
+            <p class="precio">$1499</p>
+            <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
       </div>
-      
+
       <!-- Producto 2 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-          <img src="assets\img\relojes\relojes (1).jpg" class="img-fluid" alt="Producto 3">
-          <h3>Gafas VR</h3>
-          <p class="precio">$499.99</p>
-          <div class="d-flex justify-content-between">
-            <a href="/gafas" class="ver-mas">Ver más</a>
-            <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
-          </div>
+          <img src="assets\img\gafas\gafas (2).jpg" class="img-fluid d-block" alt="Producto 3" style="height: 300px; width: 100%; object-fit: cover;"><br>
+          <h3>Gafas  Avanzadas</h3>
+          <p class="precio">$449</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
       </div>
 
       <!-- Producto 3 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-          <img src="assets\img\gafas\gafas (8).1.jpg" class="img-fluid" alt="Producto 4">
-          <h3>Relojes</h3>
-          <p class="precio">$499.99</p>
-          <div class="d-flex justify-content-between">
-            <a href="/relojes" class="ver-mas">Ver más</a>
-            <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
-          </div>
+          <img src="assets\img\relojes\relojes (8).jpg" class="img-fluid d-block" alt="Producto 4" style="height: 300px; width: 100%; object-fit: cover;"><br>
+          <h3>Reloj Táctil Casual</h3>
+          <p class="precio">$499</p>
+          <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
       </div>
 
     </div>
   </div>
 </section>
-  
   
