--- a/src/app/componentes/catalogo/relojes/relojes.component.html
+++ b/src/app/componentes/catalogo/relojes/relojes.component.html
@@ -2,7 +2,6 @@
 
 <br><br><br><br><br><br><br>
 
-
 <div class="container">
   <div class="row">
 
@@ -25,6 +24,7 @@
             <li>GPS integrado</li>
             <li>Notificaciones inteligentes</li>
           </ul>
+          <p class="card-text">Precio: $199</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -49,6 +49,7 @@
             <li>Notificaciones de llamadas y mensajes</li>
             <li>Monitor de estrés</li>
           </ul>
+          <p class="card-text">Precio: $249</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -73,6 +74,7 @@
             <li>Aplicaciones integradas</li>
             <li>Compatibilidad con asistentes virtuales</li>
           </ul>
+          <p class="card-text">Precio: $499</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -97,6 +99,7 @@
             <li>Modo de supervivencia con batería extendida</li>
             <li>Resistencia a condiciones extremas</li>
           </ul>
+          <p class="card-text">Precio: $349</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -104,7 +107,6 @@
 
   </div>
 </div>
-
 
 
   <!-- ======= Testimonials Section ======= -->
@@ -186,18 +188,19 @@
       <!-- Producto 1 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-            <img src="assets/img/producto2.jpg" class="img-fluid" alt="Producto 2">
-            <h3>Móviles</h3>
-            <p class="precio">$999.99</p>
+            <img src="assets\img\Moviles\movil5.1.jpeg" class="img-fluid d-block" alt="Producto 2" style="height: 300px; width: 100%; object-fit: cover;"><br>
+            <h3>Móvil Helios</h3>
+            <p class="precio">$1999</p>
             <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
-    </div>
+      </div>
+
       <!-- Producto 2 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-          <img src="assets/img/producto3.jpg" class="img-fluid" alt="Producto 3">
-          <h3>Gafas VR</h3>
-          <p class="precio">$499.99</p>
+          <img src="assets\img\impresora\Impresora (4).jpg" class="img-fluid d-block" alt="Producto 3" style="height: 300px; width: 100%; object-fit: cover;"><br>
+          <h3>Impresora 3D Multifuncional</h3>
+          <p class="precio">$899</p>
           <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
       </div>
@@ -205,9 +208,9 @@
       <!-- Producto 3 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-          <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 4">
-          <h3>Impresora 3D</h3>
-          <p class="precio">$699.99</p>
+          <img src="assets\img\relojes\relojes (3).jpg" class="img-fluid d-block" alt="Producto 4" style="height: 300px; width: 100%; object-fit: cover;">
+          <h3>Reloj Táctil De Lujo</h3>
+          <p class="precio">$499</p>
           <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
       </div>
