--- a/src/app/componentes/catalogo/gafas/gafas.component.html
+++ b/src/app/componentes/catalogo/gafas/gafas.component.html
@@ -6,7 +6,7 @@
     <!-- Modelo de gafas VR 1 -->
     <div class="col-md-6 mb-4">
       <div class="card h-100">
-        <img src="assets\img\gafas\gafas (3).jpg" width="400" height="300" class="card-img-top" alt="Gafas VR 1">
+        <img src="assets\img\gafas\gafas (7).jpg" width="400" height="300" class="card-img-top" alt="Gafas VR 1">
         <div class="card-body">
           <h5 class="card-title">Gafas de Realidad Virtual Básicas</h5>
           <p class="card-text">Las gafas de realidad virtual básicas ofrecen una experiencia inmersiva a un precio asequible. Perfectas para explorar mundos virtuales y disfrutar de contenido 3D.</p>
@@ -22,6 +22,7 @@
             <li>Fácil de usar y configurar</li>
             <li>Compatible con la mayoría de los smartphones</li>
           </ul>
+          <p class="card-text">Precio: $299</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -46,6 +47,7 @@
             <li>Controladores táctiles incluidos</li>
             <li>Audio envolvente integrado</li>
           </ul>
+          <p class="card-text">Precio: $449</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -54,7 +56,7 @@
     <!-- Modelo de gafas VR 3 -->
     <div class="col-md-6 mb-4">
       <div class="card h-100">
-        <img src="assets\img\gafas\gafas (4).jpg" width="400" height="300" class="card-img-top" alt="Gafas VR 3">
+        <img src="assets\img\gafas\gafas21.png" width="400" height="300" class="card-img-top" alt="Gafas VR 3">
         <div class="card-body">
           <h5 class="card-title">Gafas de Realidad Virtual para Entretenimiento</h5>
           <p class="card-text">Las gafas de realidad virtual para entretenimiento están diseñadas para ofrecer una experiencia inigualable al ver películas, videos y eventos en 360 grados desde la comodidad de tu hogar.</p>
@@ -70,6 +72,7 @@
             <li>Comodidad para uso prolongado</li>
             <li>Experiencia cinematográfica inmersiva</li>
           </ul>
+          <p class="card-text">Precio: $349</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -94,6 +97,7 @@
             <li>Compatibilidad con software de diseño 3D</li>
             <li>Aplicaciones en arquitectura, medicina, diseño industrial, etc.</li>
           </ul>
+          <p class="card-text">Precio: $599</p>
           <a href="/carrito" class="btn btn-success">Comprar Ahora</a>
         </div>
       </div>
@@ -101,6 +105,7 @@
 
   </div>
 </div>
+
  <!-- ======= Testimonials Section ======= -->
  <section id="testimonials" class="testimonials section-bg">
   <div class="container">
@@ -109,7 +114,7 @@
 
       <div class="col-lg-6" data-aos="fade-up">
         <div class="testimonial-item">
-          <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+          <img src="assets/img/testimonials/testimonials-1.jpg" width="150" height="150" class="testimonial-img" alt="">
           <h3>Saul Goodman</h3>
           <h4>Ceo &amp; Founder</h4>
           <p>
@@ -122,7 +127,7 @@
 
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <div class="testimonial-item mt-4 mt-lg-0">
-          <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+          <img src="assets/img/testimonials/testimonials-2.jpg" width="150" height="150" class="testimonial-img" alt="">
           <h3>Sara Wilsson</h3>
           <h4>Designer</h4>
           <p>
@@ -135,7 +140,7 @@
 
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
         <div class="testimonial-item mt-4">
-          <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+          <img src="assets/img/testimonials/testimonials-3.jpg" width="150" height="150" class="testimonial-img" alt="">
           <h3>Jena Karlis</h3>
           <h4>Store Owner</h4>
           <p>
@@ -148,7 +153,7 @@
 
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
         <div class="testimonial-item mt-4">
-          <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+          <img src="assets/img/testimonials/testimonials-4.jpg" width="150" height="150" class="testimonial-img" alt="">
           <h3>Matt Brandon</h3>
           <h4>Freelancer</h4>
           <p>
@@ -158,10 +163,6 @@
           </p>
         </div>
       </div>
-
-    
-
-     
 
     </div>
 
@@ -180,18 +181,19 @@
       <!-- Producto 1 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-            <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 2">
-            <h3>Impresora 3D</h3>
-            <p class="precio">$699.99</p>
+            <img src="assets\img\Moviles\movil3.jpeg" class="img-fluid d-block" alt="Producto 2" style="height: 300px; width: 100%; object-fit: cover;">
+            <h3>Móvil Quantum</h3>
+            <p class="precio">$899</p>
             <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
-    </div>
+      </div>
+
       <!-- Producto 2 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-          <img src="assets/img/producto2.jpg" class="img-fluid" alt="Producto 3">
-          <h3>Móviles</h3>
-          <p class="precio">$999.99</p>
+          <img src="assets\img\impresora\Impresora (5).jpg" class="img-fluid d-block" alt="Producto 3" style="height: 300px; width: 100%; object-fit: cover;">
+          <h3>Impresora 3D Básica</h3>
+          <p class="precio">$349</p>
           <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
       </div>
@@ -199,9 +201,9 @@
       <!-- Producto 3 -->
       <div class="col-lg-4 col-md-6">
         <div class="producto">
-          <img src="assets/img/producto1.jpg" class="img-fluid" alt="Producto 4">
-          <h3>Relojes</h3>
-          <p class="precio">$499.99</p>
+          <img src="assets\img\relojes\relojes (3).jpg" class="img-fluid d-block" alt="Producto 4" style="height: 300px; width: 100%; object-fit: cover;">
+          <h3>Reloj Táctil De Lujo</h3>
+          <p class="precio">$499</p>
           <a href="/carrito" class="btn-comprar">Comprar Ahora</a>
         </div>
       </div>
