--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -103,64 +103,61 @@
           <h2>Productos Destacados</h2>
           
         </div>
-    
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
-    
+        <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
+
           <!-- Producto 1 -->
           <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto">
-              <img src="assets/img/producto4.jpg" class="img-fluid" alt="Producto 2">
-              <h3>Impresora 3D</h3>
-              <p class="precio">$699.99</p>
-              <div class="d-flex justify-content-between">
-                <a href="/impresora" class="ver-mas">Ver más</a>
+            <div class="producto d-flex flex-column align-items-center justify-content-center">
+              <img src="assets\img\impresora\impresora23.jpg" class="img-fluid producto-img" alt="Producto 2">
+             <br> <h3 class="text-center">Impresora 3D Industrial</h3>
+              <p class="precio text-center">$2999</p>
+              <div class="d-flex justify-content-center flex-column align-items-center w-100">
+                <a href="/impresora" class="ver-mas mb-2">Ver más</a>
                 <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
               </div>
             </div>
           </div>
-          
+        
           <!-- Producto 2 -->
           <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto">
-              <img src="assets/img/producto3.jpg" class="img-fluid" alt="Producto 3">
-              <h3>Gafas VR</h3>
-              <p class="precio">$499.99</p>
-              <div class="d-flex justify-content-between">
-                <a href="/gafas" class="ver-mas">Ver más</a>
+            <div class="producto d-flex flex-column align-items-center justify-content-center">
+              <img src="assets\img\gafas\gafas (2).jpg" class="img-fluid producto-img" alt="Producto 3">
+              <br><h3 class="text-center">Gafas Avanzadas</h3>
+              <p class="precio text-center">$449</p>
+              <div class="d-flex justify-content-center flex-column align-items-center w-100">
+                <a href="/gafas" class="ver-mas mb-2">Ver más</a>
                 <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
               </div>
             </div>
           </div>
-    
+        
           <!-- Producto 3 -->
           <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto">
-              <img src="assets/img/producto1.jpg" class="img-fluid" alt="Producto 4">
-              <h3>Relojes</h3>
-              <p class="precio">$499.99</p>
-              <div class="d-flex justify-content-between">
-                <a href="/relojes" class="ver-mas">Ver más</a>
+            <div class="producto d-flex flex-column align-items-center justify-content-center">
+              <img src="assets\img\relojes\relojes (3).jpg" class="img-fluid producto-img" alt="Producto 4">
+             <br> <h3 class="text-center">Reloj Táctil De Lujo</h3>
+              <p class="precio text-center">$449</p>
+              <div class="d-flex justify-content-center flex-column align-items-center w-100">
+                <a href="/relojes" class="ver-mas mb-2">Ver más</a>
                 <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
               </div>
             </div>
           </div>
-    
+        
           <!-- Producto 4 -->
           <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto">
-              <img src="assets/img/producto2.jpg" class="img-fluid" alt="Producto 5">
-              <h3>Auriculares</h3>
-              <p class="precio">$299.99</p>
-              <div class="d-flex justify-content-between">
-                <a href="/auriculares" class="ver-mas">Ver más</a>
+            <div class="producto d-flex flex-column align-items-center justify-content-center">
+              <img src="assets\img\Moviles\movil5.1.jpeg" class="img-fluid producto-img" alt="Producto 5">
+              <br><h3 class="text-center">Móvil Helios</h3>
+              <p class="precio text-center">$1999</p>
+              <div class="d-flex justify-content-center flex-column align-items-center w-100">
+                <a href="/moviles" class="ver-mas mb-2">Ver más</a>
                 <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
               </div>
             </div>
           </div>
-    
+        
         </div>
-      </div>
-    </section>
       
 
 
