he Añadido los servicios

--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -97,68 +97,4 @@
   
       </div>
     </section><!-- End About Us Section -->
-    <section id="productos-relacionados" class="productos-relacionados">
-      <div class="container">
-        <div class="section-title" data-aos="fade-up">
-          <h2>Productos Destacados</h2>
-          
-        </div>
-        <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
-
-          <!-- Producto 1 -->
-          <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto d-flex flex-column align-items-center justify-content-center">
-              <img src="assets\img\impresora\impresora23.jpg" class="img-fluid producto-img" alt="Producto 2">
-             <br> <h3 class="text-center">Impresora 3D Industrial</h3>
-              <p class="precio text-center">$2999</p>
-              <div class="d-flex justify-content-center flex-column align-items-center w-100">
-                <a href="/impresora" class="ver-mas mb-2">Ver más</a>
-                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
-              </div>
-            </div>
-          </div>
-        
-          <!-- Producto 2 -->
-          <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto d-flex flex-column align-items-center justify-content-center">
-              <img src="assets\img\gafas\gafas (2).jpg" class="img-fluid producto-img" alt="Producto 3">
-              <br><h3 class="text-center">Gafas Avanzadas</h3>
-              <p class="precio text-center">$449</p>
-              <div class="d-flex justify-content-center flex-column align-items-center w-100">
-                <a href="/gafas" class="ver-mas mb-2">Ver más</a>
-                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
-              </div>
-            </div>
-          </div>
-        
-          <!-- Producto 3 -->
-          <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto d-flex flex-column align-items-center justify-content-center">
-              <img src="assets\img\relojes\relojes (3).jpg" class="img-fluid producto-img" alt="Producto 4">
-             <br> <h3 class="text-center">Reloj Táctil De Lujo</h3>
-              <p class="precio text-center">$449</p>
-              <div class="d-flex justify-content-center flex-column align-items-center w-100">
-                <a href="/relojes" class="ver-mas mb-2">Ver más</a>
-                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
-              </div>
-            </div>
-          </div>
-        
-          <!-- Producto 4 -->
-          <div class="col-lg-6 col-md-6 mb-4">
-            <div class="producto d-flex flex-column align-items-center justify-content-center">
-              <img src="assets\img\Moviles\movil5.1.jpeg" class="img-fluid producto-img" alt="Producto 5">
-              <br><h3 class="text-center">Móvil Helios</h3>
-              <p class="precio text-center">$1999</p>
-              <div class="d-flex justify-content-center flex-column align-items-center w-100">
-                <a href="/moviles" class="ver-mas mb-2">Ver más</a>
-                <a href="/carrito" class="btn btn-success btn-sm">Comprar Ahora</a>
-              </div>
-            </div>
-          </div>
-        
-        </div>
-      
-
-
-  
+ <app-productos-destacados></app-productos-destacados>
