--- a/src/app/componentes/productos-destacados/productos-destacados.component.html
+++ b/src/app/componentes/productos-destacados/productos-destacados.component.html
@@ -16,8 +16,8 @@
                 <br><h3 class="text-center">{{tarjeta.nombre}}</h3>
                 <p class="precio text-center">{{"$" + tarjeta.precio}}</p>
                 <div class="d-flex justify-content-center flex-column align-items-center w-100">
-                  <a href="" class="ver-mas mb-2">Ver más</a>
-                  <a href="" class="btn btn-success btn-sm">Comprar Ahora</a>
+                  <a [routerLink]="[tarjeta.ver_mas]" class="ver-mas mb-2">Ver más</a>
+                  <a [routerLink]="[tarjeta.boton_comprar]" class="btn btn-success btn-sm">Comprar Ahora</a>
                 </div>
               </div>
             </div>
