--- a/src/app/componentes/contacto/contacto.component.html
+++ b/src/app/componentes/contacto/contacto.component.html
@@ -42,7 +42,7 @@
               <div class="row">
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
-                  <h4>Localzación:</h4>
+                  <h4>Localización:</h4>
                   <p>C/ de l'Arxiduc Carles, 2, 11, <br>Patraix, 46018 València</p>
                 </div>
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -81,7 +81,8 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Su mensaje fue enviado!</div>
               </div>
-              <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
+             
+              <div class="text-center"><a href="/contacto" class="btn btn-success btn-sm">Enviar Mensaje</a></div>
             </form>
           </div>
         </div>
