--- a/src/app/componentes/nabvar/nabvar.component.html
+++ b/src/app/componentes/nabvar/nabvar.component.html
@@ -44,6 +44,7 @@
       </ul>
     </li>
     <li><a routerLink="/contacto" >Contacto</a></li>
+    <li><a routerLink="/personajeRyM" >rickymorty</a></li>
     <li class="nav-item">
       <a class="nav-link"  class="bi bi-person fs-4" routerLink="/login"></a>
     </li>
