he modificado el api

--- a/src/app/componentes/ricky-morty/ricky-morty.component.html
+++ b/src/app/componentes/ricky-morty/ricky-morty.component.html
@@ -9,26 +9,33 @@
       <h3>{{ personajesRyM.info.pages }}</h3>
       <h3>{{ personajesRyM.info.prev }}</h3>
     </div>
-    <!-- Paginación -->
-     <div class="col-12">
-            <button class="btn btn-primary mx-3  my-3 p-2" (click)="CambiaPagina('Anterior')">Anterior</button>
-            <button class="btn btn-primary mx-3  my-3 p-2" (click)="CambiaPagina('Primera')">Primera</button>
-            <button class="btn btn-primary mx-3  my-3 p-2" (click)="CambiaPagina('Ultima')">Última</button>
-            <button class="btn btn-primary mx-3  my-3 p-2" (click)="CambiaPagina('Siguiente')">Siguiente</button>    
-        </div> 
-    <div class="div-12">
-      <button class="btn btn-secondary mx-3 my-3 p-2" (click)="CambiaPagina('Anterior')" >Anterior</button>
-      <button class="btn btn-secondary mx-3 my-3 p-2" (click)="CambiaPagina('Primera')" >1</button>
-      <button class="btn btn-secondary mx-3 my-3 p-2">2</button>  //Agregar la de 2
-      <button class="btn btn-secondary mx-3 my-3 p-2">...</button>
-      <button class="btn btn-secondary mx-3 my-3 p-2" (click)="CambiaPagina('Penultima')">
+    <!-- Paginación superior con botones verdes -->
+    <div class="col-12 text-center">
+      <button class="btn btn-success mx-3 my-3 p-2" (click)="CambiaPagina('Anterior')">Anterior</button>
+      <button class="btn btn-success mx-3 my-3 p-2" (click)="CambiaPagina('Primera')">Primera</button>
+      <button class="btn btn-success mx-3 my-3 p-2" (click)="CambiaPagina('Ultima')">Última</button>
+      <button class="btn btn-success mx-3 my-3 p-2" (click)="CambiaPagina('Siguiente')">Siguiente</button>    
+    </div> 
+    <!-- Paginación inferior con botones negros menos oscuros -->
+    <div class="div-12 text-center">
+      <button class="btn btn-dark mx-3 my-3 p-2" (click)="CambiaPagina('Anterior')" >Anterior</button>
+      <button class="btn btn-dark mx-3 my-3 p-2" (click)="CambiaPagina('Primera')" >1</button>
+      <button class="btn btn-dark mx-3 my-3 p-2">2</button>
+      <button class="btn btn-dark mx-3 my-3 p-2">...</button>
+      <button class="btn btn-dark mx-3 my-3 p-2" (click)="CambiaPagina('Penultima')">
         {{ this.personajesRyM.info.pages - 1 }}
       </button>
-      <button class="btn btn-secondary mx-3 my-3 p-2" (click)="CambiaPagina('Ultima')">
+      <button class="btn btn-dark mx-3 my-3 p-2" (click)="CambiaPagina('Ultima')">
         {{ this.personajesRyM.info.pages }}
       </button>
-      <button class="btn btn-secondary mx-3 my-3 p-2" (click)="CambiaPagina('Siguiente')">Siguiente</button>
+      <button class="btn btn-dark mx-3 my-3 p-2" (click)="CambiaPagina('Siguiente')">Siguiente</button>
     </div> 
+  </div><br><br>
+  <div class="row justify-content-center">
+    <div class="col-12 text-center">
+      <h2>¡Elija una tarjeta, Cada tarjeta tiene un descuento sorpresa al presentarla en la tienda!</h2>
+      <h3>Una tarjeta valida por cada compra</h3><br><br>
+    </div>
   </div>
   <div class="row justify-content-space-around">
     @for (personaje of personajesRyM.results; track personaje) {
@@ -52,20 +59,10 @@
           <li class="list-group-item">{{ personaje.gender }}</li>
           <li class="list-group-item">{{ personaje.created }}</li>
           <li class="list-group-item">{{ personaje.location.name }}</li>
-          <li class="list-group-item">{{ personaje.location.url }}</li>
           <li class="list-group-item">{{ personaje.origin.name }}</li>
-          <li class="list-group-item">{{ personaje.origin.url }}</li>
-          <li class="list-group-item">
-            <ul>
-              @for (episodio of personaje.episode; track episodio) {
-              <li>{{ episodio }}</li>
-              }
-            </ul>
-          </li>
           <li class="list-group-item">{{ personaje.species }}</li>
           <li class="list-group-item">{{ personaje.status }}</li>
           <li class="list-group-item">{{ personaje.type }}</li>
-          <li class="list-group-item">{{ personaje.url }}</li>
         </ul>
       </div>
     </div>
