he actualizado un servicio

--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,5 +1,7 @@
 <app-nabvar></app-nabvar>
 
+<link rel="home.component.css" href="Stylesheet">
+
 <section id="hero" style="height: 600px;"> <!-- Ajusta la altura como desees -->
   <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
