--- a/src/app/componentes/ricky-morty/ricky-morty.component.css
+++ b/src/app/componentes/ricky-morty/ricky-morty.component.css
@@ -2,3 +2,24 @@
     cursor: pointer;
     border:solid;
 }
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .card-img {
+    width: 100%;
+    height: auto;
+    max-height: 300px;
+    margin-top: 50px; /* Centra la imagen verticalmente */
+    margin-left: 30px;/* Centra la imagen verticalmente */
+  }
+  
+  .col-md-4 {
+    flex: 0 0 33.333333%;
+  }
+  
+  .col-md-8 {
+    flex: 0 0 66.666666%;
+  }
