he creado el boton que genera el numero al azar de la tarjeta que te toca

--- a/src/app/componentes/ricky-morty/ricky-morty.component.html
+++ b/src/app/componentes/ricky-morty/ricky-morty.component.html
@@ -28,14 +28,19 @@
   </div><br><br>
   <div class="row justify-content-center">
     <div class="col-12 text-center">
-      <h2>¡Elija una tarjeta, Cada tarjeta tiene un descuento sorpresa al presentarla en la tienda!</h2>
-      <h3>Una tarjeta valida por cada compra</h3><br><br>
+      <h2>¡Pulse el boton y obtega un descuento sorpresa, si su perosnaje esta "alive"!</h2>
+      <h3>Un descuento valido por compra</h3><br><br>
     </div>
   </div>
 
 
 
-
+  <div class="row justify-content-center">
+    <div class="col-12 text-center">
+      <button class="btn btn-success" (click)="generarNumeroAleatorio()">Generar Número</button>
+    </div>
+  </div>
+  <p id="result"></p>
 <br><br>
 
 <div class="row justify-content-center">
